# test-repo

./: CHANGELOG.md  pyproject.toml
.github/workflows/: publish_testpypi.yml  semantic-release.yml
test_repo/: _version.py
